--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,9 @@
 @import "tailwindcss";
 
 body{
-    background-color:black;
+    background-color:#171717;
     overflow-x: hidden;
+}
+html {
+  scroll-behavior: smooth;
 }
